src/main/java/com/example/assignment/global/error/ErrorResponse.java
package com.example.assignment.global.error;

import com.fasterxml.jackson.core.JsonProcessingException;
import com.fasterxml.jackson.databind.ObjectMapper;
import lombok.*;

@Builder
@Getter
@Setter
@AllArgsConstructor
public class ErrorResponse {

    public String message;

    public String convertObjectToJson() throws JsonProcessingException {
        ObjectMapper mapper = new ObjectMapper();
        return mapper.writeValueAsString(this);
    }

}
